--- a/templates/physics/physics.ipynb
+++ b/templates/physics/physics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4b861e7c-1ebd-4cd9-93eb-ecd161fa9230",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "from sympy import *\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -55,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
